--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Sara Chen's Portfolio</title>
 </head>
 
@@ -30,7 +32,7 @@
     </div>
 
 
-    <h2 id="protfolio" >PROTFOLIO</h2>
+    <h2 id="protfolio">PROTFOLIO</h2>
 
     <div class="main-container">
         <section class="container">
@@ -45,7 +47,7 @@
             <p>This project searches through a specific database to find information that the user is trying to look
                 up.</p>
         </section>
-        <section class="container" >
+        <section class="container">
             <img src="images/portfolio-3.png" alt="Travel App">
             <h3>Travel App</h3>
             <p>This project compares travel times based on different transportation methods and tells you the best
